# tiny-systemd

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
config/etc/tiny-systemd/: tiny-systemd.conf
src/: CMakeLists.txt  README.md  pidcontext.cpp  pidcontext.h  pidfilecat.cpp  pidfilecat.h  serviceconfig.cpp  serviceconfig.h  servicepidwatcher.cpp  servicepidwatcher.h  serviceprocess.cpp  serviceprocess.h  serviceprocessdaemon.cpp  serviceprocessdaemon.h  startstopdaemoncmd.cpp  startstopdaemoncmd.h  tinydaemonserver.cpp  tinydaemonserver.h
src/cmd/: tiny_exe_simple.cpp  tiny_system_ctl.cpp  tiny_systemd.cpp
tool/: CMakeLists.txt  pipetest.cpp  tinystartstopdaemon.c
